test/pos/bug199.scala
class C { object o; }

object objectInClass {
  def main(args: Array[String]) = {
    (new C).o; ()
  }
}
