test/neg/bug71.scala
// ga2

object ga2 extends gu.ga1() {
  // implementation of foo()
  def foo():java.lang.String = "foo";
  // my main inherited
  def main( args:Array[String] ):Unit = {
    mymain ();
  }
}
